[package]
name = "openxrlauncher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
open = "5.0.1"
steam-webapi-rust-sdk = "0.0.8"
steamlocate = "1.2.1"
stereokit = "0.16.8"
sysinfo = "0.30.5"
